ezee-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-ezeelogin-service
  namespace: default
  labels:
    app: test-ezeelogin
    environment: test
  annotations:
    cloud.google.com/neg: '{"ingress": true}'

spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: test-ezeelogin
    environment: test
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-ezeelogin-deployment
spec:
  selector:
    matchLabels:
      app: test-ezeelogin
      environment: test
  template:
    metadata:
      labels:
        app: test-ezeelogin
        environment: test
    spec:
      containers:
        - image: ezeelogin/ee:ezeelogin-test-0.4.0
          name: ezeeloginee
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
