kiali_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiali-service
  namespace: istio-system
  labels:
    app: test-ezeelogin
    environment: test
  annotations:
    cloud.google.com/neg: '{"ingress": true}'

spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: test-ezeelogin
    environment: test
  type: NodePort
